--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MvvM App</string>
+
+    <!-- Home Screen -->
+    <string name="home_title">Películas Populares</string>
+    <string name="home_error_loading">Error al cargar películas</string>
+    <string name="home_loading">Cargando…</string>
+    <string name="home_retry">Reintentar</string>
 </resources>
